<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/sortBottomSheet"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:orientation="vertical"
              app:behavior_hideable="true"
              app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/sortByInstruction"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="12sp"
        android:padding="8dp"
        android:gravity="left"
        android:text="@string/sort_by"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/sortTitleAZ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_title_AZ"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortTitleZA"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_title_ZA"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortAuthorAZ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_author_AZ"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortAuthorZA"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_author_ZA"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortTypeAZ"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_type_AZ"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortTypeZA"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_type_ZA"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortDateAscending"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:gravity="center"
        android:text="@string/sort_date_ascending"
        android:textColor="@android:color/black" android:textStyle="bold"/>

    <TextView
        android:id="@+id/sortDateDescending"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sortOptionHeight"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/sort_date_descending"
        android:textColor="@android:color/black" android:textStyle="bold"/>



</LinearLayout>